--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "UmaruBot",
+	"name": "Mahir_BOT",
 	"version": "31.7.2",
-	"description": "A simple Facebook Messenger Bot made by me(CatalizCS) and my brother SpermLord.",
+	"description": "A simple Facebook Messenger Bot made by me(Mahir Tahsan) and my bother Minhaj",
 	"main": "mirai.js",
 	"scripts": {
 		"start": "node index",
@@ -10,7 +10,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/umaruchan0x1861/umarubot1.1.1"
+		"url": "https://github.com/DoD-99/umarubot1.1.1"
 	},
 	"keywords": [
 		"bot",
@@ -27,7 +27,7 @@
 	"bugs": {
 		"url": "https://github.com/umaruchan0x1861/umarubot1.1.1/issues"
 	},
-	"homepage": "https://github.com/umaruchan0x1861/umarubot1.1.1",
+	"homepage": "https://github.com/DoD-99/umarubot1.1.1",
 	"dependencies": {
 		"@maihuybao/fca-unofficial": "^1.3.13-2",
 		"@miraipr0ject/assets": "",
